fix(ui): searchbar dropdown covered by table rows

--- a/packages/ui/src/elements/SearchBar/index.scss
+++ b/packages/ui/src/elements/SearchBar/index.scss
@@ -19,7 +19,7 @@
     }
 
     &:has(.popup--active) {
-      z-index: 1;
+      z-index: 2;
     }
 
     .icon--search {
